# latitude_challenge

./: Dockerfile  README.md  anonymise_data_test.py  pyproject.toml  requirements.txt  run.py  start.sh
data_files/masked_data.csv/: .part-00000-975b0457-3016-4f1f-bfa0-7d3e29e5a889-c000.csv.crc  .part-00000-e30e7a41-7657-43cb-bcd4-16b576de377b-c000.csv.crc  part-00000-975b0457-3016-4f1f-bfa0-7d3e29e5a889-c000.csv  part-00000-e30e7a41-7657-43cb-bcd4-16b576de377b-c000.csv
data_files/output_data.csv/: .part-00000-010f9bc6-2be9-4daa-aa1e-7273c442134c-c000.csv.crc  .part-00000-915977a8-253a-4c4b-b13d-41b438c1b682-c000.csv.crc  part-00000-010f9bc6-2be9-4daa-aa1e-7273c442134c-c000.csv  part-00000-915977a8-253a-4c4b-b13d-41b438c1b682-c000.csv
latitude_challenge1/: anonymise_data.py
test_data_files/masked_data.csv/: .part-00000-49208aca-eebd-44fa-a131-3a361ec4d6c9-c000.csv.crc  part-00000-49208aca-eebd-44fa-a131-3a361ec4d6c9-c000.csv
test_data_files/output_data_test.csv/: .part-00000-fd8f9a14-cccd-4697-8b31-134d00b15c73-c000.csv.crc  part-00000-fd8f9a14-cccd-4697-8b31-134d00b15c73-c000.csv
tests/: anonymise_data_test.py
tests/test_data_files/masked_data.csv/: .part-00000-40d3cbce-5684-48b5-834c-da6e40cd460c-c000.csv.crc  .part-00000-b2a8059d-ea53-4f31-8707-572beae27b4e-c000.csv.crc  part-00000-40d3cbce-5684-48b5-834c-da6e40cd460c-c000.csv  part-00000-b2a8059d-ea53-4f31-8707-572beae27b4e-c000.csv
tests/test_data_files/output_data_test.csv/: .part-00000-3e932a89-3bee-4100-9a67-f920102529a9-c000.csv.crc  .part-00000-62d35b25-1c35-4d52-a712-986ec291aa2e-c000.csv.crc  (+2 more)
